* Add encoding to do the same as charset. * Make encoding/charset a bit more verbose. * Add latin1 as an alias for iso-8859-1. * Update the view containers actions when switching encoding.

BUG:147481

svn path=/branches/extragear/kde3/network/konversation/; revision=684831